# Groak

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.txt
Test_Application/: CMakeLists.txt  main.cpp
include/: GApplication.h  GBasic_Framebuffer.h  GBasic_Window.h  GButton.h  GCharacter.h  GChild_Window.h  GConsole.h  GCore.h  GCursor.h  GDecorated_Window.h  GEvent.h  GFramebuffer.h  GLog_Manager.h  GLog_Stream.h  GPos.h  GQuad.h  GRenderer.h  GResize_Area.h  GString.h  GText_Box.h  GTexture.h  GTitle_Bar.h  GUnits.h  GVertex.h  GWindow.h  Groak.h
include/GConsole/: Content_Area.h  GConsole.h  GSBuff.h
include/GQueue/: GQueue.h  GQueue.inl  GTQueue.h  GTQueue.inl  Node.h
include/GResize_Area/: GResize_Horizontal.h  GResize_Vertical.h
src/: GCore.cpp  GEvent.cpp
src/GApplication/: Callbacks.cpp  GApplication.cpp  Recording_Callbacks.cpp
src/GLogger/: GLog_Manager.cpp  GLog_Stream.cpp
src/GLogger/GConsole/: Content_Area.cpp  GConsole.cpp  GSBuff.cpp
src/GSimulator/: GSimulator.cpp
src/Graphic_Elm/: GBasic_Framebuffer.cpp  GFramebuffer.cpp  GQuad.cpp  GRenderer.cpp  GRenderer.cppa  Inconsolata-Black.inl  text render.txt
src/Graphic_Elm/Shaders/: Fragment.glsl  Shaders.inl  Shaders.inl.in  Update_Shaders.cmake  Vertex.glsl
src/Window_Types/GBasic_Window/: GBasic_Window.cpp
src/Window_Types/GButton/: GButton.cpp
src/Window_Types/GChild_Window/: GChild_Window.cpp
src/Window_Types/GDecorated_Window/: GDecorated_Window.cpp
src/Window_Types/GResize_Area/: GResize_Area.cpp  GResize_Horizontal.cpp  GResize_Vertical.cpp
src/Window_Types/GText_Box/: GText_Box.cpp
src/Window_Types/GWindow/: GWindow.cpp
src/Window_Types/Gtitle_Bar/: GTitle_Bar.cpp  res.inl
